# MLOps_project

./: LICENSE  README.md  pyproject.toml  requirements.txt  tasks.py  utf_8_check.py
.dvc/: config
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
models/: model.pth
src/mlops_project/: data.py  visualize.py
