[build-system]
requires = ["setuptools>=61.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_project"
version = "0.0.1"
description = "This is a project to study code structure in MLOps course."
authors = [
  { name = "Lin Zhu", email = "your@email.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
train = "src.mlops_project.train:main"
evaluate = "src.mlops_project.evaluate:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements_dev.txt"]}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
